  (patch #540 - Eric Le Lay)

}}}
{{{ UI Improvements

- More font size choices for 4K and higher-res displays (Patch# 549 - Makarius)

- EOL marker character is a localizable property (view.eolMarkerChar),
  and an arrow (↩) instead of period (.) (#3902 - Alan Ezust)

- Proper button margins for Nimbus L&F (Patch #538 - Makarius)

- Floating dockables as JDialog (Patch #537 - Makarius)

- CompletionPopup should accept TAB for completion selection
  (Patch # 525 - Jakub Holý)

- Separated sorting of Buffer Sets and Buffer Switcher (Dale Anson)

}}}
{{{ Miscellaneous

- New Korean translation file (Patch #551 - yaraba)

- Resize performance improvement (Patch #547 - Sergey Mashkov)

- Properties are sorted when saved (Feature Request #342, Patch #536 - Makarius)

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Plugin Bug #1732 - Björn "Vampire" Kautler)

}}}
{{{ API Changes

- View now sends ViewUpdate message on EditBus when full screen mode is toggled.
  This is useful to plugins that may need to adjust their appearance when the
  screen mode is toggled. (Dale Anson)

- close-all sends BufferClosing events on EditBus for each buffer closed.
  This is useful to plugins that record closed files. (patch #550, Eric Le Lay)

}}}
{{{ Editing

- Updates to Scala Mode (Patch #554 - Makarius)

- New mode for rust (Patches #553, #556 - Jordan Miner)

- New mode for Kotlin syntax (Patch #552 - Sergey Mashkov)

- Updates to cfscript mode (Patch #531 - Darien Brown)

- New mode for ANS Forth 1994 (Patch #530 - Mark Corbin)

- New mode for mustache templates (Patch #532 - Kevin Hunter Kesling)

- New mode for Antlr 4 (Dale Anson)

}}}
}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: