@@ -3,16 +3,16 @@
 <!DOCTYPE MODE SYSTEM "xmode.dtd">
 
 <MODE>
-	<RULES>
-		<EOL_SPAN TYPE="LITERAL1" AT_LINE_START="TRUE">+++</EOL_SPAN>
-		<EOL_SPAN TYPE="LITERAL2" AT_LINE_START="TRUE">---</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD3" AT_LINE_START="TRUE">Index: </EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD1" AT_LINE_START="TRUE">+</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD1" AT_LINE_START="TRUE">&gt;</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD2" AT_LINE_START="TRUE">-</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD2" AT_LINE_START="TRUE">&lt;</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD3" AT_LINE_START="TRUE">!</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD3" AT_LINE_START="TRUE">@@</EOL_SPAN>
-		<EOL_SPAN TYPE="KEYWORD3" AT_LINE_START="TRUE">*</EOL_SPAN>
-	</RULES>
+  <RULES>
+    <EOL_SPAN TYPE="LABEL" AT_LINE_START="TRUE">+++</EOL_SPAN>
+    <EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">---</EOL_SPAN>
+    <EOL_SPAN TYPE="KEYWORD3" AT_LINE_START="TRUE">Index: </EOL_SPAN>
+    <EOL_SPAN TYPE="LABEL" AT_LINE_START="TRUE">+</EOL_SPAN>
+    <EOL_SPAN TYPE="LABEL" AT_LINE_START="TRUE">&gt;</EOL_SPAN>
+    <EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">-</EOL_SPAN>
+    <EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">&lt;</EOL_SPAN>
+    <EOL_SPAN TYPE="LITERAL3" AT_LINE_START="TRUE">!</EOL_SPAN>
+    <EOL_SPAN TYPE="LITERAL2" AT_LINE_START="TRUE">@@</EOL_SPAN>
+    <EOL_SPAN TYPE="LABEL" AT_LINE_START="TRUE">*</EOL_SPAN>
+  </RULES>
 </MODE>
